miniC.output
Grammaire

    0 $accept: programme $end

    1 programme: liste_declarations liste_fonctions

    2 liste_declarations: liste_declarations declaration
    3                   | declaration_fonction

    4 declaration_fonction: /* vide */
    5                     | declaration_fonction EXTERN type IDENTIFICATEUR LPAREN liste_parms RPAREN SEMICOLON

    6 liste_fonctions: fonction
    7                | liste_fonctions fonction

    8 declaration: type liste_declarateurs SEMICOLON

    9 liste_declarateurs: liste_declarateurs COMMA declarateur
   10                   | declarateur

   11 declarateur: IDENTIFICATEUR
   12            | declarateur LBRACKET CONSTANTE RBRACKET

   13 $@1: /* vide */

   14 $@2: /* vide */

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 bloc $@2

   16 type: VOID
   17     | INT

   18 liste_parms: liste_parms COMMA parm
   19            | parm
   20            | /* vide */

   21 parm: INT IDENTIFICATEUR

   22 liste_instructions: instruction liste_instructions
   23                   | /* vide */

   24 instruction: iteration
   25            | selection
   26            | saut
   27            | appel
   28            | affectation SEMICOLON

   29 $@3: /* vide */

   30 instruction: $@3 bloc

   31 iteration: FOR LPAREN affectation SEMICOLON condition SEMICOLON affectation RPAREN instruction
   32          | WHILE LPAREN condition RPAREN bloc

   33 selection: IF LPAREN condition RPAREN instruction
   34          | IF LPAREN condition RPAREN instruction ELSE instruction
   35          | SWITCH LPAREN expression RPAREN LBRACE switch_block RBRACE

   36 switch_block: cases default_case

   37 cases: /* vide */
   38      | cases CASE CONSTANTE COLON instruction

   39 default_case: /* vide */
   40             | DEFAULT COLON instruction

   41 appel: IDENTIFICATEUR LPAREN liste_expressions RPAREN SEMICOLON

   42 saut: BREAK SEMICOLON
   43     | RETURN SEMICOLON
   44     | RETURN expression SEMICOLON

   45 bloc: LBRACE liste_declarations liste_instructions RBRACE

   46 affectation: variable OP expression

   47 variable: var

   48 var: IDENTIFICATEUR
   49    | var LBRACKET expression RBRACKET

   50 expression: LPAREN expression RPAREN
   51           | expression binary_op expression
   52           | MOINS expression
   53           | CONSTANTE
   54           | variable
   55           | IDENTIFICATEUR LPAREN liste_expressions RPAREN

   56 liste_expressions: expression
   57                  | liste_expressions COMMA expression
   58                  | /* vide */

   59 condition: NOT LPAREN condition RPAREN
   60          | condition binary_rel condition
   61          | LPAREN condition RPAREN
   62          | expression binary_comp expression

   63 binary_op: PLUS
   64          | MOINS
   65          | MUL
   66          | DIV
   67          | LSHIFT
   68          | RSHIFT
   69          | BAND
   70          | BOR

   71 binary_rel: LAND
   72           | LOR

   73 binary_comp: LT
   74            | GT
   75            | GEQ
   76            | LEQ
   77            | EQ
   78            | NEQ


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
IDENTIFICATEUR (258) 5 11 15 21 41 48 55
CONSTANTE (259) 12 38 53
VOID (260) 16
INT (261) 17 21
FOR (262) 31
WHILE (263) 32
IF (264) 33 34
ELSE (265) 34
SWITCH (266) 35
CASE (267) 38
DEFAULT (268) 40
BREAK (269) 42
RETURN (270) 43 44
PLUS (271) 63
MOINS (272) 52 64
MUL (273) 65
DIV (274) 66
LSHIFT (275) 67
RSHIFT (276) 68
BAND (277) 69
BOR (278) 70
LAND (279) 71
LOR (280) 72
LT (281) 73
GT (282) 74
GEQ (283) 75
LEQ (284) 76
EQ (285) 77
NEQ (286) 78
NOT (287) 59
EXTERN (288) 5
LBRACE (289) 35 45
RBRACE (290) 35 45
LPAREN (291) 5 15 31 32 33 34 35 41 50 55 59 61
RPAREN (292) 5 15 31 32 33 34 35 41 50 55 59 61
COMMA (293) 9 18 57
LBRACKET (294) 12 49
RBRACKET (295) 12 49
SEMICOLON (296) 5 8 28 31 41 42 43 44
COLON (297) 38 40
THEN (298)
OP (299) 46
REL (300)


Non-terminaux, suivis des règles où ils apparaissent

$accept (46)
    à gauche: 0
programme (47)
    à gauche: 1, à droite: 0
liste_declarations (48)
    à gauche: 2 3, à droite: 1 2 45
declaration_fonction (49)
    à gauche: 4 5, à droite: 3 5
liste_fonctions (50)
    à gauche: 6 7, à droite: 1 7
declaration (51)
    à gauche: 8, à droite: 2
liste_declarateurs (52)
    à gauche: 9 10, à droite: 8 9
declarateur (53)
    à gauche: 11 12, à droite: 9 10 12
fonction (54)
    à gauche: 15, à droite: 6 7
$@1 (55)
    à gauche: 13, à droite: 15
$@2 (56)
    à gauche: 14, à droite: 15
type (57)
    à gauche: 16 17, à droite: 5 8 15
liste_parms (58)
    à gauche: 18 19 20, à droite: 5 15 18
parm (59)
    à gauche: 21, à droite: 18 19
liste_instructions (60)
    à gauche: 22 23, à droite: 22 45
instruction (61)
    à gauche: 24 25 26 27 28 30, à droite: 22 31 33 34 38 40
$@3 (62)
    à gauche: 29, à droite: 30
iteration (63)
    à gauche: 31 32, à droite: 24
selection (64)
    à gauche: 33 34 35, à droite: 25
switch_block (65)
    à gauche: 36, à droite: 35
cases (66)
    à gauche: 37 38, à droite: 36 38
default_case (67)
    à gauche: 39 40, à droite: 36
appel (68)
    à gauche: 41, à droite: 27
saut (69)
    à gauche: 42 43 44, à droite: 26
bloc (70)
    à gauche: 45, à droite: 15 30 32
affectation (71)
    à gauche: 46, à droite: 28 31
variable (72)
    à gauche: 47, à droite: 46 54
var (73)
    à gauche: 48 49, à droite: 47 49
expression (74)
    à gauche: 50 51 52 53 54 55, à droite: 35 44 46 49 50 51 52 56
    57 62
liste_expressions (75)
    à gauche: 56 57 58, à droite: 41 55 57
condition (76)
    à gauche: 59 60 61 62, à droite: 31 32 33 34 59 60 61
binary_op (77)
    à gauche: 63 64 65 66 67 68 69 70, à droite: 51
binary_rel (78)
    à gauche: 71 72, à droite: 60
binary_comp (79)
    à gauche: 73 74 75 76 77 78, à droite: 62


état 0

    0 $accept: . programme $end

    $défaut  réduction par utilisation de la règle 4 (declaration_fonction)

    programme             aller à l'état 1
    liste_declarations    aller à l'état 2
    declaration_fonction  aller à l'état 3


état 1

    0 $accept: programme . $end

    $end  décalage et aller à l'état 4


état 2

    1 programme: liste_declarations . liste_fonctions
    2 liste_declarations: liste_declarations . declaration

    VOID  décalage et aller à l'état 5
    INT   décalage et aller à l'état 6

    liste_fonctions  aller à l'état 7
    declaration      aller à l'état 8
    fonction         aller à l'état 9
    type             aller à l'état 10


état 3

    3 liste_declarations: declaration_fonction .
    5 declaration_fonction: declaration_fonction . EXTERN type IDENTIFICATEUR LPAREN liste_parms RPAREN SEMICOLON

    EXTERN  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 3 (liste_declarations)


état 4

    0 $accept: programme $end .

    $défaut  accepter


état 5

   16 type: VOID .

    $défaut  réduction par utilisation de la règle 16 (type)


état 6

   17 type: INT .

    $défaut  réduction par utilisation de la règle 17 (type)


état 7

    1 programme: liste_declarations liste_fonctions .
    7 liste_fonctions: liste_fonctions . fonction

    VOID  décalage et aller à l'état 5
    INT   décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 1 (programme)

    fonction  aller à l'état 12
    type      aller à l'état 13


état 8

    2 liste_declarations: liste_declarations declaration .

    $défaut  réduction par utilisation de la règle 2 (liste_declarations)


état 9

    6 liste_fonctions: fonction .

    $défaut  réduction par utilisation de la règle 6 (liste_fonctions)


état 10

    8 declaration: type . liste_declarateurs SEMICOLON
   15 fonction: type . IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 bloc $@2

    IDENTIFICATEUR  décalage et aller à l'état 14

    liste_declarateurs  aller à l'état 15
    declarateur         aller à l'état 16


état 11

    5 declaration_fonction: declaration_fonction EXTERN . type IDENTIFICATEUR LPAREN liste_parms RPAREN SEMICOLON

    VOID  décalage et aller à l'état 5
    INT   décalage et aller à l'état 6

    type  aller à l'état 17


état 12

    7 liste_fonctions: liste_fonctions fonction .

    $défaut  réduction par utilisation de la règle 7 (liste_fonctions)


état 13

   15 fonction: type . IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 bloc $@2

    IDENTIFICATEUR  décalage et aller à l'état 18


état 14

   11 declarateur: IDENTIFICATEUR .
   15 fonction: type IDENTIFICATEUR . LPAREN liste_parms RPAREN $@1 bloc $@2

    LPAREN  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 11 (declarateur)


état 15

    8 declaration: type liste_declarateurs . SEMICOLON
    9 liste_declarateurs: liste_declarateurs . COMMA declarateur

    COMMA      décalage et aller à l'état 20
    SEMICOLON  décalage et aller à l'état 21


état 16

   10 liste_declarateurs: declarateur .
   12 declarateur: declarateur . LBRACKET CONSTANTE RBRACKET

    LBRACKET  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 10 (liste_declarateurs)


état 17

    5 declaration_fonction: declaration_fonction EXTERN type . IDENTIFICATEUR LPAREN liste_parms RPAREN SEMICOLON

    IDENTIFICATEUR  décalage et aller à l'état 23


état 18

   15 fonction: type IDENTIFICATEUR . LPAREN liste_parms RPAREN $@1 bloc $@2

    LPAREN  décalage et aller à l'état 19


état 19

   15 fonction: type IDENTIFICATEUR LPAREN . liste_parms RPAREN $@1 bloc $@2

    INT  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 20 (liste_parms)

    liste_parms  aller à l'état 25
    parm         aller à l'état 26


état 20

    9 liste_declarateurs: liste_declarateurs COMMA . declarateur

    IDENTIFICATEUR  décalage et aller à l'état 27

    declarateur  aller à l'état 28


état 21

    8 declaration: type liste_declarateurs SEMICOLON .

    $défaut  réduction par utilisation de la règle 8 (declaration)


état 22

   12 declarateur: declarateur LBRACKET . CONSTANTE RBRACKET

    CONSTANTE  décalage et aller à l'état 29


état 23

    5 declaration_fonction: declaration_fonction EXTERN type IDENTIFICATEUR . LPAREN liste_parms RPAREN SEMICOLON

    LPAREN  décalage et aller à l'état 30


état 24

   21 parm: INT . IDENTIFICATEUR

    IDENTIFICATEUR  décalage et aller à l'état 31


état 25

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms . RPAREN $@1 bloc $@2
   18 liste_parms: liste_parms . COMMA parm

    RPAREN  décalage et aller à l'état 32
    COMMA   décalage et aller à l'état 33


état 26

   19 liste_parms: parm .

    $défaut  réduction par utilisation de la règle 19 (liste_parms)


état 27

   11 declarateur: IDENTIFICATEUR .

    $défaut  réduction par utilisation de la règle 11 (declarateur)


état 28

    9 liste_declarateurs: liste_declarateurs COMMA declarateur .
   12 declarateur: declarateur . LBRACKET CONSTANTE RBRACKET

    LBRACKET  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 9 (liste_declarateurs)


état 29

   12 declarateur: declarateur LBRACKET CONSTANTE . RBRACKET

    RBRACKET  décalage et aller à l'état 34


état 30

    5 declaration_fonction: declaration_fonction EXTERN type IDENTIFICATEUR LPAREN . liste_parms RPAREN SEMICOLON

    INT  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 20 (liste_parms)

    liste_parms  aller à l'état 35
    parm         aller à l'état 26


état 31

   21 parm: INT IDENTIFICATEUR .

    $défaut  réduction par utilisation de la règle 21 (parm)


état 32

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms RPAREN . $@1 bloc $@2

    $défaut  réduction par utilisation de la règle 13 ($@1)

    $@1  aller à l'état 36


état 33

   18 liste_parms: liste_parms COMMA . parm

    INT  décalage et aller à l'état 24

    parm  aller à l'état 37


état 34

   12 declarateur: declarateur LBRACKET CONSTANTE RBRACKET .

    $défaut  réduction par utilisation de la règle 12 (declarateur)


état 35

    5 declaration_fonction: declaration_fonction EXTERN type IDENTIFICATEUR LPAREN liste_parms . RPAREN SEMICOLON
   18 liste_parms: liste_parms . COMMA parm

    RPAREN  décalage et aller à l'état 38
    COMMA   décalage et aller à l'état 33


état 36

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 . bloc $@2

    LBRACE  décalage et aller à l'état 39

    bloc  aller à l'état 40


état 37

   18 liste_parms: liste_parms COMMA parm .

    $défaut  réduction par utilisation de la règle 18 (liste_parms)


état 38

    5 declaration_fonction: declaration_fonction EXTERN type IDENTIFICATEUR LPAREN liste_parms RPAREN . SEMICOLON

    SEMICOLON  décalage et aller à l'état 41


état 39

   45 bloc: LBRACE . liste_declarations liste_instructions RBRACE

    $défaut  réduction par utilisation de la règle 4 (declaration_fonction)

    liste_declarations    aller à l'état 42
    declaration_fonction  aller à l'état 3


état 40

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 bloc . $@2

    $défaut  réduction par utilisation de la règle 14 ($@2)

    $@2  aller à l'état 43


état 41

    5 declaration_fonction: declaration_fonction EXTERN type IDENTIFICATEUR LPAREN liste_parms RPAREN SEMICOLON .

    $défaut  réduction par utilisation de la règle 5 (declaration_fonction)


état 42

    2 liste_declarations: liste_declarations . declaration
   45 bloc: LBRACE liste_declarations . liste_instructions RBRACE

    IDENTIFICATEUR  décalage et aller à l'état 44
    VOID            décalage et aller à l'état 5
    INT             décalage et aller à l'état 6
    FOR             décalage et aller à l'état 45
    WHILE           décalage et aller à l'état 46
    IF              décalage et aller à l'état 47
    SWITCH          décalage et aller à l'état 48
    BREAK           décalage et aller à l'état 49
    RETURN          décalage et aller à l'état 50

    LBRACE   réduction par utilisation de la règle 29 ($@3)
    $défaut  réduction par utilisation de la règle 23 (liste_instructions)

    declaration         aller à l'état 8
    type                aller à l'état 51
    liste_instructions  aller à l'état 52
    instruction         aller à l'état 53
    $@3                 aller à l'état 54
    iteration           aller à l'état 55
    selection           aller à l'état 56
    appel               aller à l'état 57
    saut                aller à l'état 58
    affectation         aller à l'état 59
    variable            aller à l'état 60
    var                 aller à l'état 61


état 43

   15 fonction: type IDENTIFICATEUR LPAREN liste_parms RPAREN $@1 bloc $@2 .

    $défaut  réduction par utilisation de la règle 15 (fonction)


état 44

   41 appel: IDENTIFICATEUR . LPAREN liste_expressions RPAREN SEMICOLON
   48 var: IDENTIFICATEUR .

    LPAREN  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 48 (var)


état 45

   31 iteration: FOR . LPAREN affectation SEMICOLON condition SEMICOLON affectation RPAREN instruction

    LPAREN  décalage et aller à l'état 63


état 46

   32 iteration: WHILE . LPAREN condition RPAREN bloc

    LPAREN  décalage et aller à l'état 64


état 47

   33 selection: IF . LPAREN condition RPAREN instruction
   34          | IF . LPAREN condition RPAREN instruction ELSE instruction

    LPAREN  décalage et aller à l'état 65


état 48

   35 selection: SWITCH . LPAREN expression RPAREN LBRACE switch_block RBRACE

    LPAREN  décalage et aller à l'état 66


état 49

   42 saut: BREAK . SEMICOLON

    SEMICOLON  décalage et aller à l'état 67


état 50

   43 saut: RETURN . SEMICOLON
   44     | RETURN . expression SEMICOLON

    IDENTIFICATEUR  décalage et aller à l'état 68
    CONSTANTE       décalage et aller à l'état 69
    MOINS           décalage et aller à l'état 70
    LPAREN          décalage et aller à l'état 71
    SEMICOLON       décalage et aller à l'état 72

    variable    aller à l'état 73
    var         aller à l'état 61
    expression  aller à l'état 74


état 51

    8 declaration: type . liste_declarateurs SEMICOLON

    IDENTIFICATEUR  décalage et aller à l'état 27

    liste_declarateurs  aller à l'état 15
    declarateur         aller à l'état 16


état 52

   45 bloc: LBRACE liste_declarations liste_instructions . RBRACE

    RBRACE  décalage et aller à l'état 75


état 53

   22 liste_instructions: instruction . liste_instructions

    IDENTIFICATEUR  décalage et aller à l'état 44
    FOR             décalage et aller à l'état 45
    WHILE           décalage et aller à l'état 46
    IF              décalage et aller à l'état 47
    SWITCH          décalage et aller à l'état 48
    BREAK           décalage et aller à l'état 49
    RETURN          décalage et aller à l'état 50

    LBRACE   réduction par utilisation de la règle 29 ($@3)
    $défaut  réduction par utilisation de la règle 23 (liste_instructions)

    liste_instructions  aller à l'état 76
    instruction         aller à l'état 53
    $@3                 aller à l'état 54
    iteration           aller à l'état 55
    selection           aller à l'état 56
    appel               aller à l'état 57
    saut                aller à l'état 58
    affectation         aller à l'état 59
    variable            aller à l'état 60
    var                 aller à l'état 61


état 54

   30 instruction: $@3 . bloc

    LBRACE  décalage et aller à l'état 39

    bloc  aller à l'état 77


état 55

   24 instruction: iteration .

    $défaut  réduction par utilisation de la règle 24 (instruction)


état 56

   25 instruction: selection .

    $défaut  réduction par utilisation de la règle 25 (instruction)


état 57

   27 instruction: appel .

    $défaut  réduction par utilisation de la règle 27 (instruction)


état 58

   26 instruction: saut .

    $défaut  réduction par utilisation de la règle 26 (instruction)


état 59

   28 instruction: affectation . SEMICOLON

    SEMICOLON  décalage et aller à l'état 78


état 60

   46 affectation: variable . OP expression

    OP  décalage et aller à l'état 79


état 61

   47 variable: var .
   49 var: var . LBRACKET expression RBRACKET

    LBRACKET  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 47 (variable)


état 62

   41 appel: IDENTIFICATEUR LPAREN . liste_expressions RPAREN SEMICOLON

    IDENTIFICATEUR  décalage et aller à l'état 68
    CONSTANTE       décalage et aller à l'état 69
    MOINS           décalage et aller à l'état 70
    LPAREN          décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 58 (liste_expressions)

    variable           aller à l'état 73
    var                aller à l'état 61
    expression         aller à l'état 81
    liste_expressions  aller à l'état 82


état 63

   31 iteration: FOR LPAREN . affectation SEMICOLON condition SEMICOLON affectation RPAREN instruction

    IDENTIFICATEUR  décalage et aller à l'état 83

    affectation  aller à l'état 84
    variable     aller à l'état 60
    var          aller à l'état 61


état 64

   32 iteration: WHILE LPAREN . condition RPAREN bloc

    IDENTIFICATEUR  décalage et aller à l'état 68
    CONSTANTE       décalage et aller à l'état 69
    MOINS           décalage et aller à l'état 70
    NOT             décalage et aller à l'état 85
    LPAREN          décalage et aller à l'état 86

    variable    aller à l'état 73
    var         aller à l'état 61
    expression  aller à l'état 87
    condition   aller à l'état 88


état 65

   33 selection: IF LPAREN . condition RPAREN instruction
   34          | IF LPAREN . condition RPAREN instruction ELSE instruction

    IDENTIFICATEUR  décalage et aller à l'état 68
    CONSTANTE       décalage et aller à l'état 69
    MOINS           décalage et aller à l'état 70
    NOT             décalage et aller à l'état 85
    LPAREN          décalage et aller à l'état 86

    variable    aller à l'état 73
    var         aller à l'état 61
    expression  aller à l'état 87
    condition   aller à l'état 89


état 66

   35 selection: SWITCH LPAREN . expression RPAREN LBRACE switch_block RBRACE

    IDENTIFICATEUR  décalage et aller à l'état 68
    CONSTANTE       décalage et aller à l'état 69
    MOINS           décalage et aller à l'état 70
    LPAREN          décalage et aller à l'état 71

    variable    aller à l'état 73
    var         aller à l'état 61
    expression  aller à l'état 90


état 67

   42 saut: BREAK SEMICOLON .
